--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
       src="videos/gone.mp4"
     ></video>
     <div class="controls">
-      <button class="btn">
+      <button class="btn" id="play">
         <i class="fa fa-play fa-2x"></i>
       </button>
-      <button class="btn">
+      <button class="btn" id="stop">
         <i class="fa fa-stop fa-2x"></i>
       </button>
-      <input type="range" id="progress" class="progress" />
+      <input
+        type="range"
+        id="progress"
+        class="progress"
+        min="0"
+        value="0"
+        max="100"
+        step="0.1"
+      />
       <span class="timestamp" id="timestamp">00:00</span>
     </div>
 
